--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section class="home" id="home">
 
     <h3>HI THERE !</h3>
-    <h1>I'M <span>N shreya Kulkarni</span></h1>
+    <h1>I'M <span>Shreya Kulkarni Nizampetkar</span></h1>
     <p>In the search for a challenging position with the IT company as a fresher for acquiring deep experience in Information and Technology Department  and share,utilize my knowledge for growth of the organization.</p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
@@ -43,8 +43,8 @@
 <div class="row">
 
     <div class="info">
-        <h3> <span> Name : </span>N shreya Kulkarni</h3>
-        <h3> <span> qualification : </span> Btech Undergraduate </h3>
+        <h3> <span> Name : </span>Shreya Kulkarni Nizampetkar</h3>
+        <h3> <span> qualification : </span> Btech  </h3>
         <h3> <span> Branch : </span>Computer Science Engineering</h3>
         <h3> <span> language : </span>English</h3>
         <a target="_blank" href="https://drive.google.com/file/d/1PFhqrekjY1oD3mk-xfdDMaxD8gHGbUjt/view?usp=sharing"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
