--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section class="home" id="home">
 
     <h3>HI THERE !</h3>
-    <h1>I'M <span>N shreya Kulkarni</span></h1>
+    <h1>I'M <span>Nizampetkar shreya Kulkarni</span></h1>
     <p>In the search for a challenging position with the IT company as a fresher for acquiring deep experience in Information and Technology Department  and share,utilize my knowledge for growth of the organization.</p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
